# OperatingSystems

./: .gitignore  README.md
alphabet_writer/: alphabet_writer.c
zestaw1/: contact_book.c  contact_book.h  contact_info.c  contact_info.h
zestaw1/client/: Makefile  client.c  random_data.h  results.txt
zestaw1/client_coredump/: Makefile  client_coredump.c  gdb.txt
zestaw1/test/: Makefile  list_test  list_test.c  rbtree_test  rbtree_test.c
zestaw10/: CMakeLists.txt
zestaw10/zad1/client/: client.c  client.h
zestaw10/zad1/common/: common.c  common.h
zestaw10/zad1/server/: server.c  server.h
zestaw10/zad1/server/threads/: server_threads.c  server_threads.h
zestaw10/zad2/common/: common.c  common.h
zestaw10/zad2/dg_client/: dg_client.c  dg_client.h
zestaw10/zad2/dg_server/: dg_server.c  dg_server.h
zestaw10/zad2/dg_server/sockets/: sockets.c  sockets.h
zestaw10/zad2/dg_server/threading/: threading.c  threading.h
zestaw2/catalogue_scraper/: Makefile  catalogue_scraper_dir.c  catalogue_scraper_nftw.c
zestaw2/file_locker/: Makefile  file_locker.c  lock_manip.c  lock_manip.h
zestaw2/io_benchmark/: Makefile  cleanup_files.sh  file_manip.c  file_manip.h  io_benchmark.c  measure_time.sh
zestaw3/constrained_interpreter/: CMakeLists.txt  constrained_batch.c  constrained_batch.h  constrained_interpreter.c  stupid_program.c
zestaw3/interpreter/: CMakeLists.txt  batch.c  batch.h  env_reader.c  interpreter.c
zestaw4/alphabet_writer/: CMakeLists.txt  Makefile  alphabet_writer.c
zestaw4/children_creator/: CMakeLists.txt  Makefile  child.c  children_creator.c
zestaw4/zad3/: CMakeLists.txt  Makefile  zad3.c  zad3_child.c
zestaw5/: pipe.c  pipe.h  pipe_interpreter.c
zestaw5/mandelbrot/: CMakeLists.txt  master.c  master_fun.c  master_fun.h  slave.c  slave_fun.c  slave_fun.h
zestaw5/pipe_interpreter/: CMakeLists.txt  pipe.c  pipe.h  pipe_interpreter.c
zestaw6/posix/: CMakeLists.txt  client.c  messaging.h  mq_client.c  mq_client.h  mq_server.c  mq_server.h  server.c  util.c
zestaw6/systemV/: CMakeLists.txt  Makefile  client.c  messaging.h  mq_client.c  mq_client.h  mq_server.c  mq_server.h  server.c  util.c  util.h
zestaw7/posix/: CMakeLists.txt  Makefile  barber_fun.c  barber_fun.h  client.c  client_creator.c  client_fun.c  client_fun.h  shared.c  shared.h  sleepingbarber.c  util.c  util.h
zestaw7/systemV/: CMakeLists.txt  Makefile  barber_fun.c  barber_fun.h  client.c  client_creator.c  client_fun.c  client_fun.h  shared.c  shared.h  shared_data.h  sleepingbarber.c  util.c  util.h
zestaw8/zad1/: CMakeLists.txt  Makefile  reader.c  reader_fun.c  reader_fun.h  util.c
zestaw8/zad2/: Makefile  infile  reader.c  reader_fun.c  reader_fun.h  record_gen.py  test.sh  util.h  zad2.raport
zestaw9/: CMakeLists.txt
zestaw9/mutexes/: mutex_rw.c
zestaw9/mutexes/commons/: commons.c  commons.h
zestaw9/mutexes/execution/: execution.c  execution.h
zestaw9/mutexes/readers/: reader.c  reader.h
zestaw9/mutexes/writers/: writer.c  writer.h
zestaw9/semaphores/: semaphore_rw.c
zestaw9/semaphores/sem_commons/: sem_commons.c  sem_commons.h
zestaw9/semaphores/sem_execution/: sem_execution.c  sem_execution.h
zestaw9/semaphores/sem_readers/: sem_readers.c  sem_readers.h
zestaw9/semaphores/sem_writers/: sem_writers.c  sem_writers.h
